// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|VideoPlayer ambient video 1`] = `
<div
  className="bc-player"
>
  <div
    className="bc-player__wrapper"
  >
    <video
      autoPlay="autoplay"
      className="video-js bc-player__video bc-player__video--default"
      controls=""
      data-account="5344802162001"
      data-application-id={true}
      data-embed="default"
      data-player-id="rkcQq7gAe"
      data-video-id="5450137526001"
      muted="muted"
    />
  </div>
</div>
`;

exports[`Storyshots components|VideoPlayer chapter video 1`] = `
<div
  className="bc-player"
>
  <div
    className="bc-player-endscreen"
  >
    <div
      className="bc-player-endscreen__replay"
      onClick={[Function]}
    >
      <svg
        height="48"
        viewBox="0 0 48 48"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h48v48H0z"
          fill="none"
        />
        <path
          d="M24 10V2L14 12l10 10v-8c6.63 0 12 5.37 12 12s-5.37 12-12 12-12-5.37-12-12H8c0 8.84 7.16 16 16 16s16-7.16 16-16-7.16-16-16-16z"
          fill="#dadada"
        />
      </svg>
    </div>
    <div
      className="bc-player-endscreen__content"
    >
      <p>
        Endscreen Component
      </p>
    </div>
  </div>
  <div
    className="bc-player__wrapper"
  >
    <video
      autoPlay="autoplay"
      className="video-js bc-player__video bc-player__video--chapter"
      controls="controls"
      data-account="5344802162001"
      data-application-id={true}
      data-embed="default"
      data-player-id="rkcQq7gAe"
      data-video-id="5450137526001"
      muted=""
    />
  </div>
</div>
`;

exports[`Storyshots components|VideoPlayer default 1`] = `
<div
  className="bc-player"
>
  <div
    className="bc-player__wrapper"
  >
    <video
      autoPlay="autoplay"
      className="video-js bc-player__video bc-player__video--default"
      controls="controls"
      data-account="5344802162001"
      data-application-id={true}
      data-embed="default"
      data-player-id="rkcQq7gAe"
      data-video-id="5450137526001"
      muted=""
    />
  </div>
</div>
`;
